--- a/GrSU.ProcessExplorer.Clients.WPF/Shell.xaml
+++ b/GrSU.ProcessExplorer.Clients.WPF/Shell.xaml
@@ -20,6 +20,7 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <ContentControl x:Name="ProcessListArea"
                   Grid.Row="0"
