--- a/GrSU.ProcessExplorer.Clients.WPF/View/Dialogs/ProcessStartDialog.xaml
+++ b/GrSU.ProcessExplorer.Clients.WPF/View/Dialogs/ProcessStartDialog.xaml
@@ -22,8 +22,8 @@
         <TextBlock TextAlignment="Left" TextWrapping="Wrap" FontSize="14">Process "asdasd" was started. Please choose action. (If you didn't start them click "Terminate")</TextBlock>
 
         <StackPanel Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" Orientation="Horizontal">
-            <Button Margin="5" Width="110" FontSize="14" Command="{Binding KeepRunning}">Keep running</Button>
-            <Button Margin="5" Width="110" FontSize="14" Command="{Binding Terminate}">Terminate</Button>
+            <Button Margin="5" Width="110" FontSize="14" IsDefault="False" Command="{Binding KeepRunning}">Keep running</Button>
+            <Button Margin="5" Width="110" FontSize="14" IsCancel="True" Command="{Binding Terminate}">Terminate</Button>
         </StackPanel>
     </Grid>
 </metro:Window>
