Added Kill context menu for process list

--- a/GrSU.ProcessExplorer.Clients.WPF/View/ProcessListView.xaml
+++ b/GrSU.ProcessExplorer.Clients.WPF/View/ProcessListView.xaml
@@ -35,6 +35,11 @@
                     </GridViewColumn>
                 </GridView>
             </ListView.View>
+            <ListView.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Kill" Command="{Binding Path=Kill}" CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=Parent.PlacementTarget.SelectedValue }" />
+                </ContextMenu>
+            </ListView.ContextMenu>
         </ListView>
     </Grid>
 </UserControl>
