--- a/GrSU.ProcessExplorer.Clients.WPF/View/TrustedProcessListView.xaml
+++ b/GrSU.ProcessExplorer.Clients.WPF/View/TrustedProcessListView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="GrSU.ProcessExplorer.Clients.WPF.View.ProcessListView"
+﻿<UserControl x:Class="GrSU.ProcessExplorer.Clients.WPF.View.TrustedProcessListView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,7 +8,7 @@
              d:DesignHeight="300" d:DesignWidth="300"
              DataContext="{Binding Source={StaticResource Locator}, Path=ProcessList}">
     <UserControl.Resources>
-        <vm:ColStretchWidthConverter x:Key="ColStretchWidthConverter" xmlns:vm="clr-namespace:GrSU.ProcessExplorer.Clients.WPF.Converters" />
+        <vm:ColStretchWidthConverter x:Key="LastColWidthConverter" xmlns:vm="clr-namespace:GrSU.ProcessExplorer.Clients.WPF.Converters" />
     </UserControl.Resources>
     <Grid>
         <ListView HorizontalAlignment="Stretch"
@@ -26,7 +26,7 @@
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Header="Name" Width="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView} }, Converter={StaticResource ColStretchWidthConverter}}">
+                    <GridViewColumn Header="Name" Width="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView} }, Converter={StaticResource LastColWidthConverter}}">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding Path=Name}" />
